--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,19 @@
 .turn>div {
 	height: 400px;
 }
-
+.col6 {
+	margin-top: 20px;
+	margin-left: 40px;
+	max-width: 100%;
+}
+@media only screen and (min-width: 600px) {
+	.col6{
+		flex: 0 0 50%;
+		max-width: 50%;
+	
+	}
+	
+}
 .turn {
 	padding-top: 20px;
 	padding-bottom: 20px;
